Source/Alternet.UI.Pal/Api/IconSet.Api.h

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>

#pragma once

#include "IconSet.h"
#include "Image.h"
#include "InputStream.h"
#include "ApiUtils.h"
#include "Exceptions.h"

using namespace Alternet::UI;

ALTERNET_UI_API IconSet* IconSet_Create_()
{
    return MarshalExceptions<IconSet*>([&](){
        return new IconSet();
    });
}

ALTERNET_UI_API void IconSet_AddImage_(IconSet* obj, Image* image)
{
    MarshalExceptions<void>([&](){
        obj->AddImage(image);
    });
}

ALTERNET_UI_API void IconSet_LoadFromStream_(IconSet* obj, void* stream)
{
    MarshalExceptions<void>([&](){
        obj->LoadFromStream(stream);
    });
}

ALTERNET_UI_API void IconSet_Clear_(IconSet* obj)
{
    MarshalExceptions<void>([&](){
        obj->Clear();
    });
}

ALTERNET_UI_API c_bool IconSet_IsOk_(IconSet* obj)
{
    return MarshalExceptions<c_bool>([&](){
        return obj->IsOk();
    });
}