Source/Alternet.UI/Native/IconSet.Generated.cs

// <auto-generated> DO NOT MODIFY MANUALLY. Copyright (c) 2026 AlterNET Software.</auto-generated>
#nullable enable
#pragma warning disable

using System;
using System.Runtime.InteropServices;
using System.ComponentModel;
using System.Security;
namespace Alternet.UI.Native
{
    internal partial class IconSet : NativeObject
    {
        static IconSet()
        {
        }
        
        public IconSet()
        {
            SetNativePointer(NativeApi.IconSet_Create_());
        }
        
        public IconSet(IntPtr nativePointer) : base(nativePointer)
        {
        }
        
        public void AddImage(Image image)
        {
            CheckDisposed();
            NativeApi.IconSet_AddImage_(NativePointer, image.NativePointer);
        }
        
        public void LoadFromStream(InputStream stream)
        {
            CheckDisposed();
            NativeApi.IconSet_LoadFromStream_(NativePointer, stream.NativePointer);
        }
        
        public void Clear()
        {
            CheckDisposed();
            NativeApi.IconSet_Clear_(NativePointer);
        }
        
        public bool IsOk()
        {
            CheckDisposed();
            return NativeApi.IconSet_IsOk_(NativePointer);
        }
        
        
        [SuppressUnmanagedCodeSecurity]
        public class NativeApi : NativeApiProvider
        {
            static NativeApi() => Initialize();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern IntPtr IconSet_Create_();
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void IconSet_AddImage_(IntPtr obj, IntPtr image);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void IconSet_LoadFromStream_(IntPtr obj, IntPtr stream);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void IconSet_Clear_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool IconSet_IsOk_(IntPtr obj);
            
        }
    }
}
